crates/oxc_css_parser/tests/error/less/variable-call/stmt-with-lookups.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `[`
  ┌─ stmt-with-lookups.less:1:8
  │
1 │ @call()[];
  │        ^


